--- a/Spreewaldgurken 1.1/Spreewaldgurken/src/Home/index.html
+++ b/Spreewaldgurken 1.1/Spreewaldgurken/src/Home/index.html
@@ -24,35 +24,35 @@
 <!--navagation-->
 <nav class="topnav" id="myTopnav">
     <div>
-        <a href="index.html" class="active" id="home" tabindex="1">Home</a>
+        <a href="index.html" class="active" id="home" tabindex="1" title="Homepage">Home</a>
     </div>
     <div class="dropdown" >
          <div class="dropbtn"> 
-             <a href="../Shop/Home/Shop.html" id="Packages" tabindex="2"> Packages </a>
+             <a href="../Shop/Home/Shop.html" id="Packages" tabindex="2" title="Packages"> Packages </a>
             <i class="fa fa-caret-down"></i>
         </div>
         <div class="dropdown-content">
-            <a href="../Shop/Special%20offers/SpecialOffers.html" id="Special">Special offers</a>
-            <a href="../Shop/Dailytrip/Dailytrip.html" id="Daytrip">Daytrip</a>
-            <a href="../Shop/Hollydays/Hollydays.html" id="Holliday">Holiday</a>
-            <a href="../Shop/Sport/Sport.html" id="Sport">Sport</a>
+            <a href="../Shop/Special%20offers/SpecialOffers.html" id="Special" title="Special offers">Special offers</a>
+            <a href="../Shop/Dailytrip/Dailytrip.html" id="Daytrip" title="Daytrip">Daytrip</a>
+            <a href="../Shop/Hollydays/Hollydays.html" id="Holliday" title="Holiday">Holiday</a>
+            <a href="../Shop/Sport/Sport.html" id="Sport" title="Sport">Sport</a>
         </div>
     </div>
     <div class="dropdown" >
         <div class="dropbtn"> 
-            <a href="../About%20the%20region/Description/Description.html" tabindex="3" > About the region </a>
+            <a href="../About%20the%20region/Description/Description.html" tabindex="3" title="About the region"> About the region </a>
             <i class="fa fa-caret-down"></i>
         </div>
         <div class="dropdown-content">
-          <a href="../About%20the%20region/Description/Description.html" id="Description"> Description </a>
-            <a href="../About%20the%20region/Foto/Foto.html" id="fotos">Photos</a>
-            <a href="../About%20the%20region/Video/video.html" id="video">Video</a>
-            <a href="../About%20the%20region/wallpaper/wallpaper.html" id="wallpaper">Wallpaper</a>
+          <a href="../About%20the%20region/Description/Description.html" id="Description" title="Description"> Description </a>
+            <a href="../About%20the%20region/Foto/Foto.html" id="fotos" title="Photos">Photos</a>
+            <a href="../About%20the%20region/Video/video.html" id="video" title="Video">Video</a>
+            <a href="../About%20the%20region/wallpaper/wallpaper.html" id="wallpaper" title="Wallpaper">Wallpaper</a>
         </div>
     </div>
-        <a href="../AboutUs/AboutUs.html" id="About" tabindex="4"> About us</a>
-        <a  href="../Contact%20Us/Contact.html" id="Contact" tabindex="5">Contact us</a>
-    <a href="javascript:void(0);" style="font-size:15px;" class="icon" onclick="myFunctionnav()">&#9776;</a>
+        <a href="../AboutUs/AboutUs.html" id="About" tabindex="4" title="About us"> About us</a>
+        <a  href="../Contact%20Us/Contact.html" id="Contact" tabindex="5" title="Contact us">Contact us</a>
+    <a href="javascript:void(0);" style="font-size:15px;" class="icon" onclick="myFunctionnav()" title="Navigation" tabindex="6">&#9776;</a>
 </nav>
 <header id="showcase" class="grid"  >
     <div class="bg-image"> </div>
@@ -62,7 +62,7 @@
             Save yourself the time and effort as we offer you several packages which include accomodation and transportation at moderate prices to tourist sites at Burg, Lubbenau, Lubben, Calau and Cottbus.
         </p>
      <div>
-         <a href="#section-b" class="btn" tabindex="6">Read More</a>
+         <a href="#section-b" class="btn" tabindex="7" title="Read More">Read More</a>
         </div>
     </div>
 </header>
@@ -93,7 +93,7 @@
         <ul>
             <li>
                 <div class="card" >
-                    <img src="../../img/Imges/G1.png" alt="">
+                    <img src="../../img/Imges/G1.png" alt="animated pickle riding bycicle">
                     <div class="card-content">
                         <h3 class="card-title">Forest Cycling Tour</h3>
                         <p>We present you the opportunity to enjoy an educational trip through the forest reserve and its surroundings with vintage bycicles that are more than five decades old. Ride through serene enviromnments and enjoy natures awesomeness as you exercise you body too. We have landmark stops where we show you educational videos of tree species and funny animal behavorial videos to help you rejuvenate for the next hurdle. </p>
@@ -102,7 +102,7 @@
             </li>
             <li>
                 <div class="card" >
-                    <img src="../../img/Imges/G3.png" alt="">
+                    <img src="../../img/Imges/G3.png" alt="animated pickle">
                     <div class="card-content">
                         <h3 class="card-title">River Boat-ride Tour</h3>
                         <p>We take you on a smooth boat ride along the rivers in the misdst of the forest reserve. This four hour journey on boats through the forest is a purely relaxing trip with ladmark stops for picknicking and education on plant and animal species.
@@ -112,7 +112,7 @@
             </li>
             <li>
                 <div class="card">
-                    <img src="../../img/Imges/G2.png" alt="">
+                    <img src="../../img/Imges/G2.png" alt="animated pickles in a boat">
                     <div class="card-content">
                         <h3 class="card-title">Food and Cultural Tourism</h3>
                         <p>Spreewald Gherkin or Cocumber fields are well known in the state of Brandenburg and Germany at large. The richness of soil in Spreewald together with local recipies presents distinguished tasty foods that cannot be found elsewhere.
@@ -164,22 +164,22 @@
     
     <div class="footer-right">
 
-        <a href="#" tabindex="7"><i class="fa fa-facebook"></i></a>
-        <a href="#" tabindex="8"><i class="fa fa-twitter"></i></a>
-        <a href="#" tabindex="9"><i class="fa fa-linkedin"></i></a>
-        <a href="#" tabindex="10s"><i class="fa fa-github"></i></a>
+        <a href="https://www.facebook.com/" tabindex="8" title="to Facebook.com"><i class="fa fa-facebook"></i></a>
+        <a href="https://twitter.com/?lang=en" tabindex="9" title="to Twitter.com"><i class="fa fa-twitter"></i></a>
+        <a href="https://www.linkedin.com/" tabindex="10" title="to LinkedIn.com"><i class="fa fa-linkedin"></i></a>
+        <a href="https://github.com" tabindex="11" title="to Github".com><i class="fa fa-github"></i></a>
     </div>
 
     <div class="footer-left">
         <p class="footer-links">
             ·
-            <a href="#" tabindex="-1">Home</a>
+            <a href="index.html" tabindex="-1" title="to Home">Home</a>
             ·
-            <a href="../Shop/Special%20offers/SpecialOffers.html" tabindex="-1">Special Offers</a>
+            <a href="../Shop/Special%20offers/SpecialOffers.html" tabindex="-1" title="to Special Offers">Special Offers</a>
         </p>
         <p  vocab="http://creativecommons.org/ns#">
 	       All content on this blog item is licensed under
-            <a class="cc" rel="license" href="http://creativecommons.org/licenses/by/3.0/">
+            <a class="cc" rel="license" href="http://creativecommons.org/licenses/by/3.0/" tabindex="12" title="License">
                 a Creative Commons License
 	       </a>
             . 
