--- a/Spreewaldgurken 1.1/Spreewaldgurken/src/About the region/Description/Description.html
+++ b/Spreewaldgurken 1.1/Spreewaldgurken/src/About the region/Description/Description.html
@@ -24,46 +24,47 @@
 <!--navagation-->
 <nav class="topnav" id="myTopnav">
     <div>
-        <a href="../../Home/index.html" class="active" id="home" tabindex="1">Home</a>
+        <a href="../../Home/index.html" class="active" id="home" tabindex="1" title="Homepage">Home</a>
     </div>
 
     <div class="dropdown">
         <div class="dropbtn"> 
-            <a href="../../Shop/Home/Shop.html" id="Packages" tabindex="2"> Packages </a>
+            <a href="../../Shop/Home/Shop.html" id="Packages" tabindex="2" title="Packages"> Packages </a>
             <i class="fa fa-caret-down"></i>
         </div>
         <div class="dropdown-content">
-            <a href="../../Shop/Special%20offers/SpecialOffers.html" id="Special">Special offers</a>
-            <a href="../../Shop/Dailytrip/Dailytrip.html" id="Daytrip">Daytrip</a>
-            <a href="../../Shop/Hollydays/Hollydays.html" id="Holliday">Holiday</a>
-            <a href="../../Shop/Sport/Sport.html" id="Sport">Sport</a>
+            <a href="../../Shop/Special%20offers/SpecialOffers.html" id="Special" title="Special offers">Special offers</a>
+            <a href="../../Shop/Dailytrip/Dailytrip.html" id="Daytrip" title="Daytrip">Daytrip</a>
+            <a href="../../Shop/Hollydays/Hollydays.html" id="Holliday" title="Holiday">Holiday</a>
+            <a href="../../Shop/Sport/Sport.html" id="Sport" title="Sport">Sport</a>
         </div>
     </div>
     <div class="dropdown">
         <div class="dropbtn"> 
-            <a href="Description.html" tabindex="3"> About the region </a>
+            <a href="Description.html" tabindex="3" title="About the region"> About the region </a>
             <i class="fa fa-caret-down"></i>
         </div>
         <div class="dropdown-content">
-            <a href="Description.html" id="Description"> Description </a>
-            <a href="../Foto/Foto.html" id="fotos">Photos</a>
-            <a href="../Video/video.html" id="video">Video</a>
-            <a href="../wallpaper/wallpaper.html" id="wallpaper">Wallpaper</a>
+            <a href="Description.html" id="Description" title="Description"> Description </a>
+            <a href="../Foto/Foto.html" id="fotos" title="Photos">Photos</a>
+            <a href="../Video/video.html" id="video" title="Video">Video</a>
+            <a href="../wallpaper/wallpaper.html" id="wallpaper" title="Wallpaper">Wallpaper</a>
         </div>
     </div>
 
-        <a href="../../AboutUs/AboutUs.html" id="About" tabindex="4">About us</a>
+        <a href="../../AboutUs/AboutUs.html" id="About" tabindex="4" title="About">About us</a>
 
-        <a href="../../Contact%20Us/Contact.html" id="Contact" tabindex="5">Contact us</a>
+        <a href="../../Contact%20Us/Contact.html" id="Contact" tabindex="5" title="Contact us">Contact us</a>
 
-    <a href="javascript:void(0);" style="font-size:15px;" class="icon" onclick="myFunctionnav()">&#9776;</a>
+    <a href="javascript:void(0);" style="font-size:15px;" class="icon" title="Navigation" tabindex="6" onclick="myFunctionnav()">&#9776;</a>
 </nav>
 
 <header >
     <ul class="breadcrumb">
         <li >
-            <a href="../../Home/index.html" tabindex="-1">Home</a>
+            Home
         </li>
+        <li>About the region</li>
         <li>Description</li>
     </ul>
 </header>
@@ -77,7 +78,7 @@
             The Spreewald is an extensive lowland area and a historic cultural landscape in the southeast of the state of Brandenburg . The main feature is the natural river branch of the Spree , which has been significantly expanded by established channels. As an alluvial and moor landscape, it is of national importance for nature conservation and is protected as a biosphere reserve. The Spreewald as a cultural landscape was the center of the Battle of Halbe at the end of World War II, which included the last major land conflicts between German and Soviet forces. The area is one of the most famous and popular destinations in the state of Brandenburg.
         </p>
         <p>
-            <a href="https://en.wikipedia.org/wiki/Spreewald" tabindex="7" id="wikiid">Read more on wiki</a>
+            <a href="https://en.wikipedia.org/wiki/Spreewald" tabindex="7" id="wikiid" title="to Wikipedia">Read more on wiki</a>
         </p>
     </div>
 </section>
@@ -116,22 +117,22 @@
     
     <div class="footer-right">
 
-        <a href="#" tabindex="8"><i class="fa fa-facebook"></i></a>
-        <a href="#" tabindex="9"><i class="fa fa-twitter"></i></a>
-        <a href="#" tabindex="10"><i class="fa fa-linkedin"></i></a>
-        <a href="#" tabindex="11"><i class="fa fa-github"></i></a>
+        <a href="https://www.facebook.com/" tabindex="7" title="to Facebook.com"><i class="fa fa-facebook"></i></a>
+        <a href="https://twitter.com/?lang=en" tabindex="8" title="to Twitter.com"><i class="fa fa-twitter"></i></a>
+        <a href="https://www.linkedin.com/" tabindex="9" title="to LinkedIn.com"><i class="fa fa-linkedin"></i></a>
+        <a href="https://github.com" tabindex="10" title="to Github".com><i class="fa fa-github"></i></a>
     </div>
 
     <div class="footer-left">
         <p class="footer-links">
             ·
-            <a href="../../Home/index.html" tabindex="-1">Home</a>
+            <a href="../../Home/index.html" tabindex="-1" title="to Home">Home</a>
             ·
-            <a href="../../Shop/Special%20offers/SpecialOffers.html" tabindex="-1">Special Offers</a>
+            <a href="../../Shop/Special%20offers/SpecialOffers.html" tabindex="-1" title="to Special Offers">Special Offers</a>
         </p>
         <p  vocab="http://creativecommons.org/ns#">
 	       All content on this blog item is licensed under
-            <a class="cc" rel="license" href="http://creativecommons.org/licenses/by/3.0/">
+            <a class="cc" rel="license" href="http://creativecommons.org/licenses/by/3.0/" title="License" tabindex="11">
                 a Creative Commons License
 	       </a>
             . 
