--- a/Spreewaldgurken 1.1/Spreewaldgurken/src/About the region/Foto/Foto.html
+++ b/Spreewaldgurken 1.1/Spreewaldgurken/src/About the region/Foto/Foto.html
@@ -24,38 +24,38 @@
 <!--navagation-->
 <nav class="topnav" id="myTopnav">
     <div>
-        <a href="../../Home/index.html" class="active" id="home" tabindex="1">Home</a>
+        <a href="../../Home/index.html" class="active" id="home" tabindex="1" title="Homepage">Home</a>
     </div>
      <div class="dropdown">
         <div class="dropbtn"> 
-            <a href="../../Shop/Home/Shop.html" id="Packages" tabindex="2"> Packages </a>
+            <a href="../../Shop/Home/Shop.html" id="Packages" tabindex="2" title="Packages"> Packages </a>
             <i class="fa fa-caret-down"></i>
         </div>
         <div class="dropdown-content">
-            <a href="../../Shop/Special%20offers/SpecialOffers.html" id="Special">Special offers</a>
-            <a href="../../Shop/Dailytrip/Dailytrip.html" id="Daytrip">Daytrip</a>
-            <a href="../../Shop/Hollydays/Hollydays.html" id="Holliday">Holiday</a>
-            <a href="../../Shop/Sport/Sport.html" id="Sport">Sport</a>
+            <a href="../../Shop/Special%20offers/SpecialOffers.html" id="Special" title="Special offers">Special offers</a>
+            <a href="../../Shop/Dailytrip/Dailytrip.html" id="Daytrip" title="Daytrip">Daytrip</a>
+            <a href="../../Shop/Hollydays/Hollydays.html" id="Holliday" title="Holiday">Holiday</a>
+            <a href="../../Shop/Sport/Sport.html" id="Sport" title="Sport">Sport</a>
         </div>
     </div>
     <div class="dropdown">
         <div class="dropbtn"> 
-            <a href="../Description/Description.html" tabindex="3"> About the region </a>
+            <a href="../Description/Description.html" tabindex="3" title="About the region"> About the region </a>
             <i class="fa fa-caret-down"></i>
         </div>
         <div class="dropdown-content">
-            <a href="../Description/Description.html" id="Description">Description </a>
-            <a href=../Foto/Foto.html id="fotos">Photos</a>
-            <a href="../Video/video.html" id="video">Video</a>
-            <a href="../wallpaper/wallpaper.html" id="wallpaper">Wallpaper</a>
+            <a href="../Description/Description.html" id="Description" title="Description">Description </a>
+            <a href=Foto.html id="fotos" title="Photos">Photos</a>
+            <a href="../Video/video.html" id="video" title="Video">Video</a>
+            <a href="../wallpaper/wallpaper.html" id="wallpaper" title="Wallpaper">Wallpaper</a>
         </div>
     </div>
 
-        <a href="../../AboutUs/AboutUs.html" id="About" tabindex="4">About us</a>
+        <a href="../../AboutUs/AboutUs.html" id="About" tabindex="4" title="About us">About us</a>
 
-        <a href="../../Contact%20Us/Contact.html" id="Contact" tabindex="5">Contact us</a>
+        <a href="../../Contact%20Us/Contact.html" id="Contact" tabindex="5" title="Contact us">Contact us</a>
 
-    <a href="javascript:void(0);" style="font-size:15px;" class="icon" onclick="myFunctionnav()">&#9776;</a>
+    <a href="javascript:void(0);" style="font-size:15px;" class="icon" onclick="myFunctionnav()" title="Navigation" tabindex="6">&#9776;</a>
 </nav>
 
 <!-- Section A -->
@@ -63,8 +63,9 @@
 <header>
     <ul class="breadcrumb">
         <li>
-            <a href="../../Home/index.html" tabindex="-1">Home</a>
+            Home
         </li>
+        <li>About the region</li>
         <li>Photos</li>
     </ul>
 </header>
@@ -74,24 +75,24 @@
     <div  class="galarie">
         <div class="row">
             <div class="column">
-                <img src="../../../img/images/888.png" style="width:100%" alt="">
-                <img src="../../../img/images/111.png" style="width:100%" alt="">
-                <img src="../../../img/Imges/111.png" style="width:100%" alt="">
+                <img src="../../../img/images/888.png" style="width:100%" alt="special spreewald pottage">
+                <img src="../../../img/images/111.png" style="width:100%" alt="lovers bench in the forest">
+                <img src="../../../img/Imges/111.png" style="width:100%" alt="animated pickle">
             </div>
             <div class="column">
-                <img src="../../../img/images/101010.png" style="width:100%" alt="">
-                <img src="../../../img/images/222.png" style="width:100%" alt="">
-                <img src="../../../img/images/cath.png" style="width:100%" alt="">
+                <img src="../../../img/images/101010.png" style="width:100%" alt="fruit">
+                <img src="../../../img/images/222.png" style="width:100%" alt="beautiful lake">
+                <img src="../../../img/images/cath.png" style="width:100%" alt="museum">
             </div>
             <div class="column">
-                <img src="../../../img/images/444.png" style="width:100%" alt="">
-                <img src="../../../img/images/111111.png" style="width:100%" alt="">
-                <img src="../../../img/images/333.png" style="width:100%" alt="">
+                <img src="../../../img/images/444.png" style="width:100%" alt="pimpers paradise">
+                <img src="../../../img/images/111111.png" style="width:100%" alt="pottage with fruits">
+                <img src="../../../img/images/333.png" style="width:100%" alt="fort">
             </div>
             <div class="column">
-                <img src="../../../img/images/131313.png" style="width:100%" alt="">
-                <img src="../../../img/images/666.png" style="width:100%" alt="">
-                <img src="../../../img/images/777.png" style="width:100%" alt="">
+                <img src="../../../img/images/131313.png" style="width:100%" alt="pickle in vinegar">
+                <img src="../../../img/images/666.png" style="width:100%" alt="riverside">
+                <img src="../../../img/images/777.png" style="width:100%" alt="packaged pickle">
             </div>
         </div>
     </div>
@@ -125,22 +126,22 @@
     
     <div class="footer-right">
 
-        <a href="#" tabindex="7"><i class="fa fa-facebook"></i></a>
-        <a href="#" tabindex="8"><i class="fa fa-twitter"></i></a>
-        <a href="#" tabindex="9"><i class="fa fa-linkedin"></i></a>
-        <a href="#" tabindex="10"><i class="fa fa-github"></i></a>
+        <a href="https://www.facebook.com/" tabindex="7" title="to Facebook.com"><i class="fa fa-facebook"></i></a>
+        <a href="https://twitter.com/?lang=en" tabindex="8" title="to Twitter.com"><i class="fa fa-twitter"></i></a>
+        <a href="https://www.linkedin.com/" tabindex="9" title="to LinkedIn.com"><i class="fa fa-linkedin"></i></a>
+        <a href="https://github.com" tabindex="10" title="to Github".com><i class="fa fa-github"></i></a>
     </div>
 
     <div class="footer-left">
         <p class="footer-links">
             ·
-            <a href="../../Home/index.html" tabindex="-1">Home</a>
+            <a href="../../Home/index.html" tabindex="-1" title="to Home">Home</a>
             ·
-            <a href="../../Shop/Special%20offers/SpecialOffers.html" tabindex="-1">Special Offers</a>
+            <a href="../../Shop/Special%20offers/SpecialOffers.html" tabindex="-1" title="to Special Offers">Special Offers</a>
         </p>
         <p  vocab="http://creativecommons.org/ns#">
 	       All content on this blog item is licensed under
-            <a class="cc" rel="license" href="http://creativecommons.org/licenses/by/3.0/">
+            <a class="cc" rel="license" href="http://creativecommons.org/licenses/by/3.0/" title="License" tabindex="11">
                 a Creative Commons License
 	       </a>
             . 
