--- a/Spreewaldgurken 1.1/Spreewaldgurken/src/About the region/wallpaper/wallpaper.html
+++ b/Spreewaldgurken 1.1/Spreewaldgurken/src/About the region/wallpaper/wallpaper.html
@@ -24,61 +24,62 @@
 <!--navagation-->
 <nav class="topnav" id="myTopnav">
     <div >
-        <a href="../../Home/index.html" class="active" id="home" tabindex="1">Home</a>
+        <a href="../../Home/index.html" class="active" id="home" tabindex="1" title="Homepage">Home</a>
     </div>
     <div class="dropdown">
         <div class="dropbtn"> 
-            <a href="../../Shop/Home/Shop.html" id="Packages" tabindex="2"> Packages </a>
+            <a href="../../Shop/Home/Shop.html" id="Packages" tabindex="2" title="Packages"> Packages </a>
             <i class="fa fa-caret-down"></i>
         </div>
         <div class="dropdown-content">
-            <a href="../../Shop/Special%20offers/SpecialOffers.html" id="Special">Special offers</a>
-            <a href="../../Shop/Dailytrip/Dailytrip.html" id="Daytrip">Daytrip</a>
-            <a href="../../Shop/Hollydays/Hollydays.html" id="Holliday">Holiday</a>
-            <a href="../../Shop/Sport/Sport.html" id="Sport">Sport</a>
+            <a href="../../Shop/Special%20offers/SpecialOffers.html" id="Special" title="Special offers">Special offers</a>
+            <a href="../../Shop/Dailytrip/Dailytrip.html" id="Daytrip" title="Daytrip">Daytrip</a>
+            <a href="../../Shop/Hollydays/Hollydays.html" id="Holliday" title="Holiday">Holiday</a>
+            <a href="../../Shop/Sport/Sport.html" id="Sport" title="Sport">Sport</a>
         </div>
     </div>
     <div class="dropdown" >
         <div class="dropbtn"> 
-            <a href="../../About%20the%20region/Description/Description.html" tabindex="3"> About the region </a>
+            <a href="../../About%20the%20region/Description/Description.html" tabindex="3" title="About the region"> About the region </a>
             <i class="fa fa-caret-down"></i>
         </div>
         <div class="dropdown-content">
-            <a href="../../About%20the%20region/Description/Description.html" id="Description">Description </a>
-            <a href="../../About%20the%20region/Foto/Foto.html" id="fotos">Photos</a>
-            <a href="../../About%20the%20region/Video/video.html" id="video">Video</a>
-            <a href="../wallpaper/wallpaper.html" id="wallpaper">Wallpaper</a>
+            <a href="../../About%20the%20region/Description/Description.html" id="Description" title="Description">Description </a>
+            <a href="../../About%20the%20region/Foto/Foto.html" id="fotos" title="Photos">Photos</a>
+            <a href="../../About%20the%20region/Video/video.html" id="video" title="Video">Video</a>
+            <a href="wallpaper.html" id="wallpaper" title="Wallpaper">Wallpaper</a>
         </div>
     </div>
-        <a href="../../AboutUs/AboutUs.html" id="About" tabindex="4">About us</a>
-       <a href="../../Contact%20Us/Contact.html" id="Contact" tabindex="5">Contact us</a>
-    <a href="javascript:void(0);" style="font-size:15px;" class="icon" onclick="myFunctionnav()">&#9776;</a>
+        <a href="../../AboutUs/AboutUs.html" id="About" tabindex="4" title="About us">About us</a>
+       <a href="../../Contact%20Us/Contact.html" id="Contact" tabindex="5" title="Contact us">Contact us</a>
+    <a href="javascript:void(0);" style="font-size:15px;" class="icon" onclick="myFunctionnav()" tabindex="6" title="Navigation">&#9776;</a>
 </nav>
 
 <!-- Section A -->
 <main>
     <ul class="breadcrumb">
-        <li tabindex="6">
-            <a href="../../Home/index.html">Home</a>
+        <li>
+            Home
         </li>
+        <li>About the region</li>
         <li>Wallpaper</li>
     </ul>
 <div class="slider">
     <figure>
         <div class="slide">
-            <img src="../../../img/images/spre2.jpg" alt="" >
+            <img src="../../../img/images/spre2.jpg" alt="animated pickle 1" >
         </div>
         <div class="slide">
-            <img src="../../../img/images/spre.png" alt="" >
+            <img src="../../../img/images/spre.png" alt="animated pickle 2" >
         </div>
         <div class="slide">
-            <img src="../../../img/images/spreee.png" alt="" >
+            <img src="../../../img/images/spreee.png" alt="animated travelers" >
         </div>
         <div class="slide">
-             <img src="../../../img/images/spree.png" alt="" >
+             <img src="../../../img/images/spree.png" alt="animated pickle 3" >
         </div>
         <div class="slide">
-            <img src="../../../img/images/12.png" alt="" >
+            <img src="../../../img/images/12.png" alt="yummy pottage" >
         </div>
     </figure>
 </div>
@@ -118,22 +119,22 @@
     
     <div class="footer-right">
 
-        <a href="#"><i class="fa fa-facebook"></i></a>
-        <a href="#"><i class="fa fa-twitter"></i></a>
-        <a href="#"><i class="fa fa-linkedin"></i></a>
-        <a href="#"><i class="fa fa-github"></i></a>
+        <a href="https://www.facebook.com/" tabindex="7" title="to Focebook.com"><i class="fa fa-facebook"></i></a>
+        <a href="https://twitter.com/?lang=en" tabindex="8" title="to Twitter.com"><i class="fa fa-twitter"></i></a>
+        <a href="https://www.linkedin.com/" tabindex="9" title="to LinkedIn.com"><i class="fa fa-linkedin"></i></a>
+        <a href="https://github.com/" tabindex="10" title="to Github.com"><i class="fa fa-github"></i></a>
     </div>
 
     <div class="footer-left">
         <p class="footer-links">
             ·
-            <a href="../../Home/index.html">Home</a>
+            <a href="../../Home/index.html" tabindex="-1" title="to Home">Home</a>
             ·
-            <a href="../../Shop/Special%20offers/SpecialOffers.html">Special Offers</a>
+            <a href="../../Shop/Special%20offers/SpecialOffers.html" tabindex="-1" title="to Special Offers">Special Offers</a>
         </p>
         <p  vocab="http://creativecommons.org/ns#">
 	       All content on this blog item is licensed under
-            <a class="cc" rel="license" href="http://creativecommons.org/licenses/by/3.0/">
+            <a class="cc" rel="license" href="http://creativecommons.org/licenses/by/3.0/" tabindex="11" title="License">
                 a Creative Commons License
 	       </a>
             . 
