--- a/Spreewaldgurken 1.1/Spreewaldgurken/src/AboutUs/AboutUs.html
+++ b/Spreewaldgurken 1.1/Spreewaldgurken/src/AboutUs/AboutUs.html
@@ -25,71 +25,71 @@
 
 <nav class="topnav" id="myTopnav">
     <div>
-        <a href="../Home/index.html" class="active" id="home" tabindex="1">Home</a>
+        <a href="../Home/index.html" class="active" id="home" tabindex="1" title="Homepage">Home</a>
     </div>
     <div class="dropdown">
           <div class="dropbtn"> 
-            <a href="../Shop/Home/Shop.html" id="Packages" tabindex="2"> Packages </a>
+            <a href="../Shop/Home/Shop.html" id="Packages" tabindex="2" title="Packages"> Packages </a>
             <i class="fa fa-caret-down"></i>
           </div>
         <div class="dropdown-content">
-            <a href="../Shop/Special%20offers/SpecialOffers.html" id="Special">Special offers</a>
-            <a href="../Shop/Dailytrip/Dailytrip.html" id="Daytrip">Daytrip</a>
-            <a href="../Shop/Hollydays/Hollydays.html" id="Holliday">Holiday</a>
-            <a href="../Shop/Sport/Sport.html" id="Sport">Sport</a>
+            <a href="../Shop/Special%20offers/SpecialOffers.html" id="Special" title="Special offers">Special offers</a>
+            <a href="../Shop/Dailytrip/Dailytrip.html" id="Daytrip" title="Daytrip">Daytrip</a>
+            <a href="../Shop/Hollydays/Hollydays.html" id="Holliday" title="Holiday">Holiday</a>
+            <a href="../Shop/Sport/Sport.html" id="Sport" title="Sport">Sport</a>
         </div>
     </div>
     <div class="dropdown">
         <div class="dropbtn"> 
-            <a href="../About%20the%20region/Description/Description.html" tabindex="3"> About the region </a>
+            <a href="../About%20the%20region/Description/Description.html" tabindex="3" title="About the region"> About the region </a>
             <i class="fa fa-caret-down"></i>
         </div>
         <div class="dropdown-content">
-            <a href="../About%20the%20region/Description/Description.html" id="Description">Description </a>
-            <a href="../About%20the%20region/Foto/Foto.html" id="fotos">Photos</a>
-            <a href="../About%20the%20region/Video/video.html" id="video">Video</a>
-            <a href="../About%20the%20region/wallpaper/wallpaper.html" id="wallpaper">Wallpaper</a>
+            <a href="../About%20the%20region/Description/Description.html" id="Description" title="Description">Description </a>
+            <a href="../About%20the%20region/Foto/Foto.html" id="fotos" title="Photos">Photos</a>
+            <a href="../About%20the%20region/Video/video.html" id="video" title="Video">Video</a>
+            <a href="../About%20the%20region/wallpaper/wallpaper.html" id="wallpaper" title="Wallpaper">Wallpaper</a>
         </div>
     </div>
 
-        <a href="AboutUs.html" id="About" tabindex="4">About us </a>
+        <a href="AboutUs.html" id="About" tabindex="4" title="About us">About us </a>
 
 
-        <a href="../Contact%20Us/Contact.html" id="Contact" tabindex="5">Contact us</a>
+        <a href="../Contact%20Us/Contact.html" id="Contact" tabindex="5" title="Contact us">Contact us</a>
 
-    <a href="javascript:void(0);" style="font-size:15px;" class="icon" onclick="myFunctionnav()">&#9776;</a>
+    <a href="javascript:void(0);" style="font-size:15px;" class="icon" onclick="myFunctionnav()" title="Navigation" tabindex="6">&#9776;</a>
 </nav>
 
 <!-- Section A -->
 <header>
     <ul class="breadcrumb">
         <li >
-            <a href="../Home/index.html" tabindex="-1">Home</a>
+            Home
         </li>
     <li>About us</li>
     </ul>
     <div class="slider">
         <figure>
             <div class="slide">
-                <img src="../../img/image/ast-baume-boot-772429.jpg" alt="" >
+                <img src="../../img/image/ast-baume-boot-772429.jpg" alt="riverside" >
             </div>
             <div class="slide">
-                <img src="../../img/image/apfel-apple-brille-616835.jpg" alt="" >
+                <img src="../../img/image/apfel-apple-brille-616835.jpg" alt="packaged pickle" >
             </div>
             <div class="slide">
-                <img src="../../img/image/container-diat-einmachglas-279035.jpg" alt="" >
+                <img src="../../img/image/container-diat-einmachglas-279035.jpg" alt="packaged pickle 2" >
             </div>
             <div class="slide">
-                <img src="../../img/image/essen-frisch-frucht-1656664.jpg" alt="" >
+                <img src="../../img/image/essen-frisch-frucht-1656664.jpg" alt="fresh vegetables" >
             </div>
             <div class="slide">
-                <img src="../../img/image/ast-baume-boot-772429.jpg" alt="" >
+                <img src="../../img/images/121212.png" alt="fresh vegetables 2" >
             </div>
         </figure>
     </div>
 </header>
 <!-- Section B -->
-<main id="section-c" class="grid" tabindex="0">
+<main id="section-c" class="grid">
     <div class="content-wrap">
         <h2 class="content-title">Our Story</h2>
         <p>
@@ -101,7 +101,7 @@
 
 <!-- Section C-->
 <div id="main">
-    <section id="section-d" class="grid" tabindex="0">
+    <section id="section-d" class="grid">
         <div class="box" vocab="http://schema.org/">
             <h2 class="content-title">Contact Us</h2>
             <p typeof="Organization">
@@ -132,22 +132,22 @@
     
     <div class="footer-right">
 
-        <a href="#" tabindex="7"><i class="fa fa-facebook"></i></a>
-        <a href="#" tabindex="8"><i class="fa fa-twitter"></i></a>
-        <a href="#" tabindex="9"><i class="fa fa-linkedin"></i></a>
-        <a href="#" tabindex="10"><i class="fa fa-github"></i></a>
+        <a href="https://www.facebook.com/" tabindex="7" title="to Facebook.com"><i class="fa fa-facebook"></i></a>
+        <a href="https://twitter.com/?lang=en" tabindex="8" title="to Twitter.com"><i class="fa fa-twitter"></i></a>
+        <a href="https://www.linkedin.com/" tabindex="9" title="to LinkedIn.com"><i class="fa fa-linkedin"></i></a>
+        <a href="https://github.com" tabindex="10" title="to Github".com><i class="fa fa-github"></i></a>
     </div>
 
     <div class="footer-left">
         <p class="footer-links">
             ·
-            <a href="../Home/index.html" tabindex="-1">Home</a>
+            <a href="../Home/index.html" tabindex="-1" title="to Home">Home</a>
             ·
-            <a href="../Shop/Special%20offers/SpecialOffers.html" tabindex="-1">Special Offers</a>
+            <a href="../Shop/Special%20offers/SpecialOffers.html" tabindex="-1" title="to Special Offers">Special Offers</a>
         </p>
         <p  vocab="http://creativecommons.org/ns#">
 	       All content on this blog item is licensed under
-            <a class="cc" rel="license" href="http://creativecommons.org/licenses/by/3.0/">
+            <a class="cc" rel="license" href="http://creativecommons.org/licenses/by/3.0/" tabindex="11" title="License">
                 a Creative Commons License
 	       </a>
             . 
