--- a/Spreewaldgurken 1.1/Spreewaldgurken/src/Shop/Special offers/SpecialOffers.html
+++ b/Spreewaldgurken 1.1/Spreewaldgurken/src/Shop/Special offers/SpecialOffers.html
@@ -24,49 +24,49 @@
 <!--navagation-->
 <nav class="topnav" id="myTopnav">
     <div>
-        <a href="../../Home/index.html" class="active" id="home" tabindex="1">Home</a>
+        <a href="../../Home/index.html" class="active" id="home" tabindex="1" title="Homepage">Home</a>
     </div>
     <div class="dropdown" >
         <div class="dropbtn"> 
-            <a href="../Home/Shop.html" id="Packages" tabindex="2"> Packages </a>
+            <a href="../Home/Shop.html" id="Packages" tabindex="2" title="Packages"> Packages </a>
             <i class="fa fa-caret-down"></i>
         </div>
         <div class="dropdown-content">
-            <a href="SpecialOffers.html" id="Special">Special offers</a>
-            <a href="../Dailytrip/Dailytrip.html" id="Daytrip">Daytrip</a>
-            <a href="../Hollydays/Hollydays.html" id="Holliday">Holiday</a>
-            <a href="../Sport/Sport.html" id="Sport">Sport</a>
+            <a href="SpecialOffers.html" id="Special" title="Special Offers">Special offers</a>
+            <a href="../Dailytrip/Dailytrip.html" id="Daytrip" title="Daytrip">Daytrip</a>
+            <a href="../Hollydays/Hollydays.html" id="Holliday" title="Holiday">Holiday</a>
+            <a href="../Sport/Sport.html" id="Sport" title="Sport">Sport</a>
         </div>
     </div>
     <div class="dropdown" >
         <div class="dropbtn"> 
-            <a href="../../About%20the%20region/Description/Description.html" tabindex="3" > About the region </a>
+            <a href="../../About%20the%20region/Description/Description.html" tabindex="3" title="About the region"> About the region </a>
             <i class="fa fa-caret-down"></i>
         </div>
         <div class="dropdown-content">
-            <a href="../../About%20the%20region/Description/Description.html" id="Description">Description </a>
-            <a href="../../About%20the%20region/Foto/Foto.html" id="fotos">Photos</a>
-            <a href="../../About%20the%20region/Video/video.html" id="video">Video</a>
-            <a href="../../About%20the%20region/wallpaper/wallpaper.html" id="wallpaper">Wallpaper</a>
+            <a href="../../About%20the%20region/Description/Description.html" id="Description" title="Description">Description </a>
+            <a href="../../About%20the%20region/Foto/Foto.html" id="fotos" title="Photos">Photos</a>
+            <a href="../../About%20the%20region/Video/video.html" id="video" title="Video">Video</a>
+            <a href="../../About%20the%20region/wallpaper/wallpaper.html" id="wallpaper" title="Wallpaper">Wallpaper</a>
         </div>
     </div>
 
-        <a href="../../AboutUs/AboutUs.html" id="About" tabindex="4">About us</a>
+        <a href="../../AboutUs/AboutUs.html" id="About" tabindex="4" title="About us">About us</a>
 
 
-        <a href="../../Contact%20Us/Contact.html" id="Contact" tabindex="5">Contact us</a>
+        <a href="../../Contact%20Us/Contact.html" id="Contact" tabindex="5" title="Contact us">Contact us</a>
 
-    <a href="javascript:void(0);" style="font-size:15px;" class="icon" onclick="myFunctionnav()">&#9776;</a>
+    <a href="javascript:void(0);" style="font-size:15px;" class="icon" onclick="myFunctionnav()" title="Navigation" tabindex="6">&#9776;</a>
 </nav>
     
 <!-- Section A -->
 <header>
     <ul class="breadcrumb">
         <li >
-            <a href="../../Home/index.html" tabindex="-1">Home</a>
+            Home
         </li>
         <li >
-            <a href="../Home/Shop.html" tabindex="-1">Packages</a>
+            Packages
         </li>
         <li>Special offers</li>
     </ul>
@@ -102,7 +102,7 @@
 
             Tip: Not all ports offer daily winter boat rides in the low season. Therefore, we recommend that prior to your arrival to the ports for "Glühweinkahnfahrten" in Spreewald ask for individual tours.You can find all these offers in sports
         </p>
-        <a href="../Sport/Sport.html" class="btn" tabindex="9">Read More</a>
+        <a href="../Sport/Sport.html" class="btn" tabindex="7" title="Read More">Read More</a>
     </div>
 </div>
 
@@ -141,22 +141,22 @@
     
     <div class="footer-right">
 
-        <a href="#"><i class="fa fa-facebook"></i></a>
-        <a href="#"><i class="fa fa-twitter"></i></a>
-        <a href="#"><i class="fa fa-linkedin"></i></a>
-        <a href="#"><i class="fa fa-github"></i></a>
+        <a href="https://www.facebook.com/" tabindex="8" title="to Facebook.com"><i class="fa fa-facebook"></i></a>
+        <a href="https://twitter.com/?lang=en" tabindex="9" title="to Twitter.com"><i class="fa fa-twitter"></i></a>
+        <a href="https://www.linkedin.com/" tabindex="10" title="to LinkedIn.com"><i class="fa fa-linkedin"></i></a>
+        <a href="https://github.com" tabindex="11" title="to Github".com><i class="fa fa-github"></i></a>
     </div>
 
     <div class="footer-left">
         <p class="footer-links">
             ·
-            <a href="../../Home/index.html" tabindex="-1">Home</a>
+            <a href="../../Home/index.html" tabindex="-1" title="to Home">Home</a>
             ·
-            <a href="#" tabindex="-1">Special Offers</a>
+            <a href="SpecialOffers.html" tabindex="-1" title="to Special Offers">Special Offers</a>
         </p>
         <p  vocab="http://creativecommons.org/ns#">
 	       All content on this blog item is licensed under
-            <a class="cc" rel="license" href="http://creativecommons.org/licenses/by/3.0/">
+            <a class="cc" rel="license" href="http://creativecommons.org/licenses/by/3.0/" title="License" tabindex="12">
                 a Creative Commons License
 	       </a>
             . 
