--- a/Spreewaldgurken 1.1/Spreewaldgurken/src/Shop/Special offers/SpecialOffers.html
+++ b/Spreewaldgurken 1.1/Spreewaldgurken/src/Shop/Special offers/SpecialOffers.html
@@ -84,7 +84,7 @@
         </div>
     </div>
 
-<section id="section-c" class="grid">
+<section id="section-c">
     <div class="content-wrap">
         <h2 class="content-title">Spreewald Welcomes You</h2>
         <p>The Spreewald Winter has its own charm. Experience an unforgettable winter holiday in the Spreewald! You can experience the white fairy-tale landscape in the Spreewald with mulled wine train rides or skating! Long-lasting frosty temperatures make the region a paradise for ice hikers and skaters. We exchange the common Ski slopes and Chairlifts experience with the unique extended winter walks on clear air, rides on the frozen sledges.<br>Enjoy every bit of wellness in the Spreewald and the soothing warmth of a bath or massages with Spreewald herbs. 
@@ -93,7 +93,7 @@
     </div>
 </section>
 
-<div id="showcase3" class="grid">
+<div id="showcase3">
     <div class="bg-image3"> </div>
     <div class="content-wrap">
         <h1>Winter Boat rides in Spreewald</h1>
