--- a/Spreewaldgurken 1.1/Spreewaldgurken/src/Shop/Special offers/SpecialOffers.html
+++ b/Spreewaldgurken 1.1/Spreewaldgurken/src/Shop/Special offers/SpecialOffers.html
@@ -74,7 +74,7 @@
 
 <main>
 
-    <div id="showcase2" class="grid">
+    <div id="showcase2">
         <div class="bg-image2"> </div>
         <div class="content-wrap">
             <h1>Welcome to our Special offers </h1>
