more on accessibility
aria-label added to footer links

--- a/Spreewaldgurken 1.1/Spreewaldgurken/src/Home/index.html
+++ b/Spreewaldgurken 1.1/Spreewaldgurken/src/Home/index.html
@@ -74,11 +74,11 @@
     <!-- Section A -->
     <section id="section-a" class="grid">
         <div class="content-wrap">
-            <h3 class="content-title">
+            <div class="content-title">
                 <a href="index.html" tabindex="-1">
                     <img id="logo" src="../../img/Imges/logo1.png" alt="SpreewaldGürken-Home" >
                 </a>
-            </h3>
+            </div>
             <div class="content-text">
                 <p>
                     We provide you with relevant and concise information material on the place, tour guides, souvenirs and tickets for events.
@@ -164,10 +164,10 @@
     
     <div class="footer-right">
 
-        <a href="https://www.facebook.com/" tabindex="8" title="to Facebook.com" alt="to facebook.com"><i class="fa fa-facebook"></i></a>
-        <a href="https://twitter.com/?lang=en" tabindex="9" title="to Twitter.com" alt="to Twitter.com"><i class="fa fa-twitter"></i></a>
-        <a href="https://www.linkedin.com/" tabindex="10" title="to LinkedIn.com" alt="to LinkedIn.com"><i class="fa fa-linkedin"></i></a>
-        <a href="https://github.com" tabindex="11" title="to Github.com" alt="to Github.com"><i class="fa fa-github"></i></a>
+        <a href="https://www.facebook.com/" tabindex="8" aria-label="to Facebook.com" ><i class="fa fa-facebook"></i></a>
+        <a href="https://twitter.com/?lang=en" tabindex="9" aria-label="to Twitter.com"><i class="fa fa-twitter"></i></a>
+        <a href="https://www.linkedin.com/" tabindex="10" aria-label="to LinkedIn.com"><i class="fa fa-linkedin"></i></a>
+        <a href="https://github.com" tabindex="11" aria-label="to Github.com"><i class="fa fa-github"></i></a>
     </div>
 
     <div class="footer-left">
