--- a/Spreewaldgurken 1.1/Spreewaldgurken/src/Home/index.html
+++ b/Spreewaldgurken 1.1/Spreewaldgurken/src/Home/index.html
@@ -164,10 +164,10 @@
     
     <div class="footer-right">
 
-        <a href="https://www.facebook.com/" tabindex="8" aria-label="to Facebook.com" ><i class="fa fa-facebook"></i></a>
-        <a href="https://twitter.com/?lang=en" tabindex="9" aria-label="to Twitter.com"><i class="fa fa-twitter"></i></a>
-        <a href="https://www.linkedin.com/" tabindex="10" aria-label="to LinkedIn.com"><i class="fa fa-linkedin"></i></a>
-        <a href="https://github.com" tabindex="11" aria-label="to Github.com"><i class="fa fa-github"></i></a>
+        <a href="https://www.facebook.com/" tabindex="8" aria-labelledby="to Facebook.com" title="to Facebook.com"><i class="fa fa-facebook"></i></a>
+        <a href="https://twitter.com/?lang=en" tabindex="9" aria-labelledby="to Twitter.com" title="to Twitter.com"><i class="fa fa-twitter"></i></a>
+        <a href="https://www.linkedin.com/" tabindex="10" aria-labelledby="to LinkedIn.com" title="to LinkedIn.com"><i class="fa fa-linkedin"></i></a>
+        <a href="https://github.com" tabindex="11" aria-labelledby="to Github.com" title="to Github.com"><i class="fa fa-github"></i></a>
     </div>
 
     <div class="footer-left">
