--- a/Spreewaldgurken 1.1/Spreewaldgurken/src/Home/index.html
+++ b/Spreewaldgurken 1.1/Spreewaldgurken/src/Home/index.html
@@ -40,7 +40,7 @@
     </div>
     <div class="dropdown" >
         <div class="dropbtn"> 
-            <a href="../About%20the%20region/Description/Description.html" tabindex="3" title="About the region"> About the region </a>
+            <a href="../About%20the%20region/Description/Description.html" tabindex="3" title="About the region"> About the region</a>
             <i class="fa fa-caret-down"></i>
         </div>
         <div class="dropdown-content">
@@ -52,12 +52,12 @@
     </div>
         <a href="../AboutUs/AboutUs.html" id="About" tabindex="4" title="About us"> About us</a>
         <a  href="../Contact%20Us/Contact.html" id="Contact" tabindex="5" title="Contact us">Contact us</a>
-    <a href="javascript:void(0);" style="font-size:15px;" class="icon" onclick="myFunctionnav()" title="Navigation" tabindex="6">&#9776;</a>
+    <a href="javascript:void(0);" style="font-size:1em;" class="icon" onclick="myFunctionnav()" title="Navigation" tabindex="6">&#9776;</a>
 </nav>
 <header id="showcase" class="grid"  >
     <div class="bg-image"> </div>
     <div class="content-wrap">
-        <h1>Welcome to Tourist Information</h1>
+        <h1>Tourist Information</h1>
         <p>Would you like to take a well planned trip to tourist locations in Spreewald?
             Save yourself the time and effort as we offer you several packages which include accomodation and transportation at moderate prices to tourist sites at Burg, Lubbenau, Lubben, Calau and Cottbus.
         </p>
