Still on Accessibility
Validated on https://achecker.ca/checker/index.php and we passed the AA checcker

--- a/Spreewaldgurken 1.1/Spreewaldgurken/src/About the region/Video/video.html
+++ b/Spreewaldgurken 1.1/Spreewaldgurken/src/About the region/Video/video.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head profile="http://dublincore.org/documents/dcq-html/" >
-    <title>SpreewaldGürken</title>
+    <title>SpreewaldGürken Video</title>
     <meta charset="utf-8"/>
     <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
     <link rel="schema.DC" href="http://purl.org/dc/elements/1.1/" />
@@ -29,7 +29,7 @@
     <div class="dropdown" >
         <div class="dropbtn"> 
             <a href="../../Shop/Home/Shop.html" id="Packages" tabindex="2" title="Packages"> Packages </a>
-            <i class="fa fa-caret-down"></i>
+            <strong class="fa fa-caret-down"></strong>
         </div>
         <div class="dropdown-content">
             <a href="../../Shop/Special%20offers/SpecialOffers.html" id="Special" title="Special offers">Special offers</a>
@@ -41,7 +41,7 @@
     <div class="dropdown">
         <div class="dropbtn"> 
             <a href="../Description/Description.html" tabindex="3" title="About the region"> About the region </a>
-            <i class="fa fa-caret-down"></i>
+            <strong class="fa fa-caret-down"></strong>
         </div>
         <div class="dropdown-content">
             <a href="../Description/Description.html" id="Description" title="Description">Description </a>
@@ -98,14 +98,15 @@
 </main>
 
 <!-- Footer -->
+<!-- Footer -->
 <footer class="footer-distributed">
     
     <div class="footer-right">
 
-        <a href="https://www.facebook.com/" tabindex="7" title="to Facebook.com"><i class="fa fa-facebook"></i></a>
-        <a href="https://twitter.com/?lang=en" tabindex="8" title="to Twitter.com"><i class="fa fa-twitter"></i></a>
-        <a href="https://www.linkedin.com/" tabindex="9" title="to LinkedIn.com"><i class="fa fa-linkedin"></i></a>
-        <a href="https://github.com" tabindex="10" title="to Github".com><i class="fa fa-github"></i></a>
+        <a href="https://www.facebook.com/" tabindex="8" title="to Facebook.com"><strong class="fa fa-facebook"></strong></a>
+        <a href="https://twitter.com/?lang=en" tabindex="9" title="to Twitter.com"><strong class="fa fa-twitter"></strong></a>
+        <a href="https://www.linkedin.com/" tabindex="10" title="to LinkedIn.com"><strong class="fa fa-linkedin"></strong></a>
+        <a href="https://github.com" tabindex="11" title="to Github.com"><strong class="fa fa-github"></strong></a>
     </div>
 
     <div class="footer-left">
@@ -113,11 +114,11 @@
             ·
             <a href="../../Home/index.html" tabindex="-1" title="to Home">Home</a>
             ·
-            <a href="../../Shop/Special%20offers/SpecialOffers.html" tabindex="-1" title="to Special Offers">Special Offers</a>
+            <a href="../../Shop/Special%2520offers/SpecialOffers.html" tabindex="-1" title="to Special Offers">Special Offers</a>
         </p>
         <p  vocab="http://creativecommons.org/ns#">
 	       All content on this blog item is licensed under
-            <a class="cc" rel="license" href="http://creativecommons.org/licenses/by/3.0/" title="License" tabindex="11">
+            <a class="cc" rel="license" href="http://creativecommons.org/licenses/by/3.0/" tabindex="12" title="License">
                 a Creative Commons License
 	       </a>
             . 
