--- a/Spreewaldgurken 1.1/Spreewaldgurken/src/Home/index.html
+++ b/Spreewaldgurken 1.1/Spreewaldgurken/src/Home/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head profile="http://dublincore.org/documents/dcq-html/" >
-    <title>SpreewaldGürken</title>
+    <title>SpreewaldGürken Homepage</title>
     <meta charset="utf-8"/>
     <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
     <link rel="schema.DC" href="http://purl.org/dc/elements/1.1/" />
@@ -29,7 +29,7 @@
     <div class="dropdown" >
          <div class="dropbtn"> 
              <a href="../Shop/Home/Shop.html" id="Packages" tabindex="2" title="Packages"> Packages </a>
-            <i class="fa fa-caret-down"></i>
+            <strong class="fa fa-caret-down"></strong>
         </div>
         <div class="dropdown-content">
             <a href="../Shop/Special%20offers/SpecialOffers.html" id="Special" title="Special offers">Special offers</a>
@@ -41,7 +41,7 @@
     <div class="dropdown" >
         <div class="dropbtn"> 
             <a href="../About%20the%20region/Description/Description.html" tabindex="3" title="About the region"> About the region</a>
-            <i class="fa fa-caret-down"></i>
+            <strong class="fa fa-caret-down"></strong>
         </div>
         <div class="dropdown-content">
           <a href="../About%20the%20region/Description/Description.html" id="Description" title="Description"> Description </a>
@@ -57,7 +57,7 @@
 <header id="showcase" class="grid"  >
     <div class="bg-image"> </div>
     <div class="content-wrap">
-        <h1>Tourist Information</h1>
+        <h2>Tourist Information</h2>
         <p>Would you like to take a well planned trip to tourist locations in Spreewald?
             Save yourself the time and effort as we offer you several packages which include accomodation and transportation at moderate prices to tourist sites at Burg, Lubbenau, Lubben, Calau and Cottbus.
         </p>
@@ -164,10 +164,10 @@
     
     <div class="footer-right">
 
-        <a href="https://www.facebook.com/" tabindex="8" aria-labelledby="to Facebook.com" title="to Facebook.com"><i class="fa fa-facebook"></i></a>
-        <a href="https://twitter.com/?lang=en" tabindex="9" aria-labelledby="to Twitter.com" title="to Twitter.com"><i class="fa fa-twitter"></i></a>
-        <a href="https://www.linkedin.com/" tabindex="10" aria-labelledby="to LinkedIn.com" title="to LinkedIn.com"><i class="fa fa-linkedin"></i></a>
-        <a href="https://github.com" tabindex="11" aria-labelledby="to Github.com" title="to Github.com"><i class="fa fa-github"></i></a>
+        <a href="https://www.facebook.com/" tabindex="8" title="to Facebook.com"><strong class="fa fa-facebook"></strong></a>
+        <a href="https://twitter.com/?lang=en" tabindex="9" title="to Twitter.com"><strong class="fa fa-twitter"></strong></a>
+        <a href="https://www.linkedin.com/" tabindex="10" title="to LinkedIn.com"><strong class="fa fa-linkedin"></strong></a>
+        <a href="https://github.com" tabindex="11" title="to Github.com"><strong class="fa fa-github"></strong></a>
     </div>
 
     <div class="footer-left">
