--- a/Spreewaldgurken 1.1/Spreewaldgurken/src/Shop/Special offers/SpecialOffers.html
+++ b/Spreewaldgurken 1.1/Spreewaldgurken/src/Shop/Special offers/SpecialOffers.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head profile="http://dublincore.org/documents/dcq-html/" >
-    <title>SpreewaldGürken</title>
+    <title>SpreewaldGürken Special Offers</title>
     <meta charset="utf-8"/>
     <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
     <link rel="schema.DC" href="http://purl.org/dc/elements/1.1/" />
@@ -29,7 +29,7 @@
     <div class="dropdown" >
         <div class="dropbtn"> 
             <a href="../Home/Shop.html" id="Packages" tabindex="2" title="Packages"> Packages </a>
-            <i class="fa fa-caret-down"></i>
+            <strong class="fa fa-caret-down"></strong>
         </div>
         <div class="dropdown-content">
             <a href="SpecialOffers.html" id="Special" title="Special Offers">Special offers</a>
@@ -41,7 +41,7 @@
     <div class="dropdown" >
         <div class="dropbtn"> 
             <a href="../../About%20the%20region/Description/Description.html" tabindex="3" title="About the region"> About the region </a>
-            <i class="fa fa-caret-down"></i>
+            <strong class="fa fa-caret-down"></strong>
         </div>
         <div class="dropdown-content">
             <a href="../../About%20the%20region/Description/Description.html" id="Description" title="Description">Description </a>
@@ -77,7 +77,7 @@
     <div id="showcase2">
         <div class="bg-image2"> </div>
         <div class="content-wrap">
-            <h1>Welcome to our Special offers </h1>
+            <h2>Welcome to our Special offers </h2>
             <p>You get 10 percent on all trips and meals.<br> our meals are prepared with organic crops freshly taken from the farm which makes them highly nutritious. <br>You also get pumpkin soup for free. Discover our special offers now!
             </p>
             <a href="../Hollydays/Hollydays.html" class="btn" tabindex="8">Read More</a>
@@ -96,7 +96,7 @@
 <div id="showcase3">
     <div class="bg-image3"> </div>
     <div class="content-wrap">
-        <h1>Winter Boat rides in Spreewald</h1>
+        <h2>Winter Boat rides in Spreewald</h2>
         <p>
             From November to March in the Spreewald is winter season. In the winter season, the popular "Glühweinkahnfahrten", as the winter boats are called in the Spreewald, rides only about twice a day at selected ports. We have cozy Blankets and hot drinks on board for cushion on this romantic winter boat trip through the snowy nature. In winter, the silence of nature is almost audible, as tourism in the Spreewald hits the lowest. You should take advantage and enjoy the uniqueness of a boat trip in the off-season, because you are almost alone on the rivers of the region.
 
@@ -137,14 +137,15 @@
 </div>
 
 <!-- Footer -->
+<!-- Footer -->
 <footer class="footer-distributed">
     
     <div class="footer-right">
 
-        <a href="https://www.facebook.com/" tabindex="8" title="to Facebook.com"><i class="fa fa-facebook"></i></a>
-        <a href="https://twitter.com/?lang=en" tabindex="9" title="to Twitter.com"><i class="fa fa-twitter"></i></a>
-        <a href="https://www.linkedin.com/" tabindex="10" title="to LinkedIn.com"><i class="fa fa-linkedin"></i></a>
-        <a href="https://github.com" tabindex="11" title="to Github".com><i class="fa fa-github"></i></a>
+        <a href="https://www.facebook.com/" tabindex="8" title="to Facebook.com"><strong class="fa fa-facebook"></strong></a>
+        <a href="https://twitter.com/?lang=en" tabindex="9" title="to Twitter.com"><strong class="fa fa-twitter"></strong></a>
+        <a href="https://www.linkedin.com/" tabindex="10" title="to LinkedIn.com"><strong class="fa fa-linkedin"></strong></a>
+        <a href="https://github.com" tabindex="11" title="to Github.com"><strong class="fa fa-github"></strong></a>
     </div>
 
     <div class="footer-left">
@@ -152,11 +153,11 @@
             ·
             <a href="../../Home/index.html" tabindex="-1" title="to Home">Home</a>
             ·
-            <a href="SpecialOffers.html" tabindex="-1" title="to Special Offers">Special Offers</a>
+            <a href="../Special%2520offers/SpecialOffers.html" tabindex="-1" title="to Special Offers">Special Offers</a>
         </p>
         <p  vocab="http://creativecommons.org/ns#">
 	       All content on this blog item is licensed under
-            <a class="cc" rel="license" href="http://creativecommons.org/licenses/by/3.0/" title="License" tabindex="12">
+            <a class="cc" rel="license" href="http://creativecommons.org/licenses/by/3.0/" tabindex="12" title="License">
                 a Creative Commons License
 	       </a>
             . 
