special offer background image
removed colour

--- a/Spreewaldgurken 1.1/Spreewaldgurken/src/AboutUs/AboutUs.html
+++ b/Spreewaldgurken 1.1/Spreewaldgurken/src/AboutUs/AboutUs.html
@@ -83,7 +83,7 @@
                 <img src="../../img/image/essen-frisch-frucht-1656664.jpg" alt="fresh vegetables" >
             </div>
             <div class="slide">
-                <img src="../../img/images/121212.png" alt="fresh vegetables 2" >
+                <img src="../../img/Offer/danksagung-dekoration-essen-1437655.jpg" alt="fresh vegetables 2" >
             </div>
         </figure>
     </div>
