--- a/Spreewaldgurken 1.1/Spreewaldgurken/src/Shop/Dailytrip/Dailytrip.html
+++ b/Spreewaldgurken 1.1/Spreewaldgurken/src/Shop/Dailytrip/Dailytrip.html
@@ -133,7 +133,7 @@
             ·
             <a href="../../Home/index.html" tabindex="-1" title="to Home">Home</a>
             ·
-            <a href="../Special%2520offers/SpecialOffers.html" tabindex="-1" title="to Special Offers">Special Offers</a>
+            <a href="../Special%20offers/SpecialOffers.html" tabindex="-1" title="to Special Offers">Special Offers</a>
         </p>
         <p  vocab="http://creativecommons.org/ns#">
 	       All content on this blog item is licensed under
