--- a/Spreewaldgurken 1.1/Spreewaldgurken/src/Home/index.html
+++ b/Spreewaldgurken 1.1/Spreewaldgurken/src/Home/index.html
@@ -72,7 +72,7 @@
     <!-- Section  breadcrumb -->
 
     <!-- Section A -->
-    <section id="section-a" class="grid">
+    <div id="section-a" class="grid">
         <div class="content-wrap">
             <div class="content-title">
                 <a href="index.html" tabindex="-1">
@@ -86,7 +86,7 @@
                 </p>
             </div>
         </div>
-    </section>
+    </div>
 
     <!-- Section B -->
     <section id="section-b" class="grid">
