--- a/Spreewaldgurken 1.1/Spreewaldgurken/src/Home/index.html
+++ b/Spreewaldgurken 1.1/Spreewaldgurken/src/Home/index.html
@@ -164,10 +164,10 @@
     
     <div class="footer-right">
 
-        <a href="https://www.facebook.com/" tabindex="8" title="to Facebook.com" ><strong class="fa fa-facebook"><span style="display: none">to Facebook.com</span></strong></a>
-        <a href="https://twitter.com/?lang=en" tabindex="9" title="to Twitter.com"><strong class="fa fa-twitter"><span style="display: none">to Twitter.com</span></strong></a>
-        <a href="https://www.linkedin.com/" tabindex="10" title="to LinkedIn.com"><strong class="fa fa-linkedin"><span style="display: none">to LinkedIn.com</span></strong></a>
-        <a href="https://github.com" tabindex="11" title="to Github.com"><strong class="fa fa-github"><span style="display: none;">to GitHub.com</span></strong></a>
+        <a href="https://www.facebook.com/" tabindex="8" title="to Facebook.com" ><strong class="fa fa-facebook"><span style="display: none; color: black">to Facebook.com</span></strong></a>
+        <a href="https://twitter.com/?lang=en" tabindex="9" title="to Twitter.com"><strong class="fa fa-twitter"><span style="display: none; color: black">to Twitter.com</span></strong></a>
+        <a href="https://www.linkedin.com/" tabindex="10" title="to LinkedIn.com"><strong class="fa fa-linkedin"><span style="display: none; color: black">to LinkedIn.com</span></strong></a>
+        <a href="https://github.com" tabindex="11" title="to Github.com"><strong class="fa fa-github"><span style="display: none; color: black">to GitHub.com</span></strong></a>
     </div>
 
     <div class="footer-left">
