--- a/Spreewaldgurken 1.1/Spreewaldgurken/src/About the region/Description/Description.html
+++ b/Spreewaldgurken 1.1/Spreewaldgurken/src/About the region/Description/Description.html
@@ -118,10 +118,10 @@
     
     <div class="footer-right">
 
-        <a href="https://www.facebook.com/" tabindex="8" title="to Facebook.com"><strong class="fa fa-facebook"></strong></a>
-        <a href="https://twitter.com/?lang=en" tabindex="9" title="to Twitter.com"><strong class="fa fa-twitter"></strong></a>
-        <a href="https://www.linkedin.com/" tabindex="10" title="to LinkedIn.com"><strong class="fa fa-linkedin"></strong></a>
-        <a href="https://github.com" tabindex="11" title="to Github.com"><strong class="fa fa-github"></strong></a>
+        <a href="https://www.facebook.com/" tabindex="7" title="to Facebook.com" ><strong class="fa fa-facebook"><span class="hide-me">to Facebook.com</span></strong></a>
+        <a href="https://twitter.com/?lang=en" tabindex="8" title="to Twitter.com"><strong class="fa fa-twitter"><span class="hide-me">to Twitter.com</span></strong></a>
+        <a href="https://www.linkedin.com/" tabindex="9" title="to LinkedIn.com"><strong class="fa fa-linkedin"><span class="hide-me">to LinkedIn.com</span></strong></a>
+        <a href="https://github.com" tabindex="10" title="to Github.com"><strong class="fa fa-github"><span class="hide-me">to GitHub.com</span></strong></a>
     </div>
 
     <div class="footer-left">
@@ -133,7 +133,7 @@
         </p>
         <p  vocab="http://creativecommons.org/ns#">
 	       All content on this blog item is licensed under
-            <a class="cc" rel="license" href="http://creativecommons.org/licenses/by/3.0/" tabindex="12" title="License">
+            <a class="cc" rel="license" href="http://creativecommons.org/licenses/by/3.0/" tabindex="11" title="License">
                 a Creative Commons License
 	       </a>
             . 
