--- a/Spreewaldgurken 1.1/Spreewaldgurken/src/Shop/Special offers/SpecialOffers.html
+++ b/Spreewaldgurken 1.1/Spreewaldgurken/src/Shop/Special offers/SpecialOffers.html
@@ -142,10 +142,10 @@
     
     <div class="footer-right">
 
-        <a href="https://www.facebook.com/" tabindex="8" title="to Facebook.com"><strong class="fa fa-facebook"></strong></a>
-        <a href="https://twitter.com/?lang=en" tabindex="9" title="to Twitter.com"><strong class="fa fa-twitter"></strong></a>
-        <a href="https://www.linkedin.com/" tabindex="10" title="to LinkedIn.com"><strong class="fa fa-linkedin"></strong></a>
-        <a href="https://github.com" tabindex="11" title="to Github.com"><strong class="fa fa-github"></strong></a>
+        <a href="https://www.facebook.com/" tabindex="8" title="to Facebook.com" ><strong class="fa fa-facebook"><span class="hide-me">to Facebook.com</span></strong></a>
+        <a href="https://twitter.com/?lang=en" tabindex="9" title="to Twitter.com"><strong class="fa fa-twitter"><span class="hide-me">to Twitter.com</span></strong></a>
+        <a href="https://www.linkedin.com/" tabindex="10" title="to LinkedIn.com"><strong class="fa fa-linkedin"><span class="hide-me">to LinkedIn.com</span></strong></a>
+        <a href="https://github.com" tabindex="11" title="to Github.com"><strong class="fa fa-github"><span class="hide-me">to GitHub.com</span></strong></a>
     </div>
 
     <div class="footer-left">
