--- a/Spreewaldgurken 1.1/Spreewaldgurken/src/Shop/Hollydays/Hollydays.html
+++ b/Spreewaldgurken 1.1/Spreewaldgurken/src/Shop/Hollydays/Hollydays.html
@@ -1,18 +1,16 @@
 <!DOCTYPE html>
-<html xmlns="http://www.w3.org/1999/xhtml" lang="en" xml:lang="en">
-<head profile="http://dublincore.org/documents/dcq-html/" >
+<html lang="en" xmlns="http://www.w3.org/1999/xhtml">
+<head>
     <title>SpreewaldGürken Holidays</title>
     <meta charset="utf-8"/>
     <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
     <link rel="schema.DC" href="http://purl.org/dc/elements/1.1/" />
     <link rel="schema.DCTERMS" href="http://purl.org/dc/terms/" />
-    <meta name="DC.format" scheme="DCTERMS.IMT" content="text/html" />
-    <meta name="DC.type" scheme="DCTERMS.DCMIType" content="Text" />
     <meta name="DC.subject" content="Spreewald Gurken , schöneSpreewahld" />
     <meta name="DC.creator" content="Moussa" />
     <meta name="DC.creator" content="Kingsley" />
-    <meta name="DCTERMS.license"  scheme="DCTERMS.URI" content="http://creativecommons.org/licenses/by/3.0/" />
-    <meta name="DCTERMS.modified" scheme="DCTERMS.W3CDTF" content="2019-01-20" />
+    <meta name="DCTERMS.license" content="http://creativecommons.org/licenses/by/3.0/" />
+    <meta name="DCTERMS.modified" content="2019-01-20" />
     <link href = "../../../css/Style.css" rel= "stylesheet" type= "text/css" media="all"/>
     <link href="../../../css/Alternative.css" rel="alternate stylesheet" type="text/css" title="alternative" media="all">
     <link href="../../../css/StyleAlternativ.css" rel="alternate stylesheet" type="text/css" title="black and white" media="all">
