--- a/Spreewaldgurken 1.1/Spreewaldgurken/src/Shop/Dailytrip/Dailytrip.html
+++ b/Spreewaldgurken 1.1/Spreewaldgurken/src/Shop/Dailytrip/Dailytrip.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
-<html lang="en">
-<head profile="http://dublincore.org/documents/dcq-html/" >
+<html lang="en" xmlns="http://www.w3.org/1999/xhtml">
+<head>
     <title>SpreewaldGürken Daily Trip</title>
     <meta charset="utf-8"/>
     <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
